working on navigation - trying to fix the gap

--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -4,7 +4,9 @@ body {
   background-color: #171144; }
 
 main {
-  min-height: 600px; }
+  min-height: 700px;
+  margin: 0;
+  padding: 0; }
 
 .alignRight {
   float: right;
