--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,7 +13,9 @@ body {
   background-color: $darkBlue;
 }
 main {
-  min-height: 600px;
+  min-height: 700px;
+  margin:0;
+  padding:0;
 }
 
 .alignRight {
